--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatioble" content="IE-edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>User Experience Design Experts</h1>
     <h2>Find your expert (researcher, professor, author, etc.) in the domain of UX Design.)</h2>
+      <div class="multi-selector">
+          <div class="select-field">
+            <input type="text" name="categories" placeholder="Choose categories" class="input-ca">
+            <span class="down-arrow">&blacktriangledown;</span>
+          </div>
+
+          <div class="list">
+            <label class="category">
+              <input type="checkbox" name="">
+              Category 1
+            </label>
+            <label class="category">
+              <input type="checkbox" name="">
+              Category 2
+            </label>
+            <label class="category">
+              <input type="checkbox" name="">
+              Category 3
+            </label>
+            <label class="category">
+              <input type="checkbox" name="">
+              Category 4
+            </label>
+            <label class="category">
+              <input type="checkbox" name="">
+              Category 5
+            </label>
+          </div>
+      </div>
+
       <div class="box1">
         <img src="images/donaldNorman.jpeg" alt="Donald_Norman">
         <div class="text">
@@ -41,4 +76,13 @@
         </div>
       </div>
     <p></p>
+              <script>
+              document.querySelector('.select-field').addEventListener('click',()=>{
+              document.querySelector('.list').classList.toggle('show');
+              document.querySelector('.down-arrow').classList.toggle('rotate180');
+
+              });
+
+              </script>
 </body>
+</html>
