--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="box1">
-        <img src="images/donaldNorman.jpeg" alt="Donald_Norman">
+        <img src="../images/donaldNorman.jpeg" alt="Donald_Norman">
         <div class="text">
           <h3>Author</h3>
           <h4>Donald Norman</h4>
