--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <h1>User Experience Design Experts</h1>
     <h2>Find your expert (researcher, professor, author, etc.) in the domain of UX Design.)</h2>
-      <div class="multi-selector">
-          <div class="select-field">
-            <input type="text" name="categories" placeholder="Choose categories" class="input-ca">
-            <span class="down-arrow">&blacktriangledown;</span>
+      <div class="multi-selector-category">
+          <div class="select-field-category">
+            <input type="text" name="categories" placeholder="Choose category" class="input-ca">
+            <span class="down-arrow-category">&blacktriangledown;</span>
           </div>
 
-          <div class="list">
+          <div class="listCatergory">
             <label class="category">
               <input type="checkbox" name="">
               Category 1
@@ -39,8 +39,30 @@
           </div>
       </div>
 
+      <div class="multi-selector-expert">
+          <div class="select-field-expert">
+            <input type="text" name="categories" placeholder="Choose expert" class="input-ca">
+            <span class="down-arrow-expert">&blacktriangledown;</span>
+          </div>
+
+          <div class="listExpert">
+            <label class="expert">
+              <input type="checkbox" name="">
+              Donald Norman
+            </label>
+            <label class="expert">
+              <input type="checkbox" name="">
+              Nelly Ben Hayoun
+            </label>
+            <label class="expert">
+              <input type="checkbox" name="">
+              Peter James Thomas
+            </label>
+          </div>
+      </div>
+
       <div class="box1">
-        <img src="../images/donaldNorman.jpeg" alt="Donald_Norman">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Donald_Norman_at_AWF05.jpg/300px-Donald_Norman_at_AWF05.jpg" alt="Donald_Norman">
         <div class="text">
           <h3>Author</h3>
           <h4>Donald Norman</h4>
@@ -77,12 +99,15 @@
       </div>
     <p></p>
               <script>
-              document.querySelector('.select-field').addEventListener('click',()=>{
-              document.querySelector('.list').classList.toggle('show');
-              document.querySelector('.down-arrow').classList.toggle('rotate180');
-
+              document.querySelector('.select-field-category').addEventListener('click',()=>{
+              document.querySelector('.listCatergory').classList.toggle('show');
+              document.querySelector('.down-arrow-category').classList.toggle('rotate180');
               });
 
+              document.querySelector('.select-field-expert').addEventListener('click',()=>{
+              document.querySelector('.listExpert').classList.toggle('show');
+              document.querySelector('.down-arrow-expert').classList.toggle('rotate180');
+              });
               </script>
 </body>
 </html>
