--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
     <h2>Find your expert (researcher, professor, author, etc.) in the domain of UX Design.)</h2>
       <div class="multi-selector-category">
           <div class="select-field-category">
-            <input type="text" name="categories" placeholder="All categories" class="input-ca">
+            <input type="text" name="categories" placeholder="All categories">
             <span class="down-arrow-category">&blacktriangledown;</span>
           </div>
 
           <div class="listCatergory">
             <label class="category">
               <input type="checkbox" name="">
-              Category 1
+              User Research
             </label>
             <label class="category">
               <input type="checkbox" name="">
-              Category 2
+              Usability
             </label>
             <label class="category">
               <input type="checkbox" name="">
-              Category 3
+              User Interface Design
             </label>
             <label class="category">
               <input type="checkbox" name="">
-              Category 4
+              Costumer Experience
             </label>
             <label class="category">
               <input type="checkbox" name="">
-              Category 5
+              Computer Programming
             </label>
           </div>
       </div>
 
       <div class="multi-selector-expert">
           <div class="select-field-expert">
-            <input type="text" name="categories" placeholder="All experts" class="input-ca">
+            <input type="text" name="categories" placeholder="All experts">
             <span class="down-arrow-expert">&blacktriangledown;</span>
           </div>
 
@@ -103,15 +103,17 @@
       </div>
     <p></p>
               <script>
-              document.querySelector('.select-field-category').addEventListener('click',()=>{
-              document.querySelector('.listCatergory').classList.toggle('show');
-              document.querySelector('.down-arrow-category').classList.toggle('rotate180');
-              });
+              document.querySelector('.select-field-category').addEventListener('click',()=>
+                {
+                  document.querySelector('.listCatergory').classList.toggle('show');
+                  document.querySelector('.down-arrow-category').classList.toggle('rotate180');
+                });
 
-              document.querySelector('.select-field-expert').addEventListener('click',()=>{
-              document.querySelector('.listExpert').classList.toggle('show');
-              document.querySelector('.down-arrow-expert').classList.toggle('rotate180');
-              });
+              document.querySelector('.select-field-expert').addEventListener('click',()=>
+                {
+                  document.querySelector('.listExpert').classList.toggle('show');
+                  document.querySelector('.down-arrow-expert').classList.toggle('rotate180');
+                });
               </script>
 </body>
 </html>
